--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -17,5 +17,5 @@ jobs:
       run: echo "${{ github.token }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
     - name: Build and push
       run: |
-        docker build -t ghcr.io/${{ github.repository_owner }}/python-app:latest .
-        docker push ghcr.io/${{ github.repository_owner }}/python-app:latest
+        docker build -t ghcr.io/student1337-prog/python-app:latest .
+        docker push ghcr.io/student1337-prog/python-app:latest
