--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -7,15 +7,10 @@ jobs:
   docker-deploy:
     runs-on: ubuntu-latest
     steps:
-    - name: set lower case owner name 
-      run: | 
-        echo "OWNER_LC=${OWNER,,}" >>${GITHUB_ENV} 
-      env: 
-        OWNER: "student1337-prog"
     - uses: actions/checkout@v4
     - name: Login to GHCR
       run: echo "${{ github.token }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
     - name: Build and push
       run: |
-        docker build -t ghcr.io/student1337-prog/python-app:latest .
-        docker push ghcr.io/student1337-prog/python-app:latest
+        docker build -t ghcr.io/${{ github.repository_owner }}/python-app:latest .
+        docker push ghcr.io/${{ github.repository_owner }}/python-app:latest
